--- a/src/usb_camera_driver/config/config.yaml
+++ b/src/usb_camera_driver/config/config.yaml
@@ -1,21 +1,18 @@
 /usb_camera/usb_camera_driver:
+
   ros__parameters:
-    autostart: true
+    autostart: false
     base_topic_name: camera
     best_effort_qos: true
-    brightness: 0.0
-    camera_calibration_file: file:///home/neo/workspace/src/ros2_usb_camera/src/usb_camera_driver/config/camera.yaml
+    camera_calibration_file: file:///home/federica/Scrivania/progetto_dafn/src/usb_camera_driver/config/camera.yaml
     camera_id: 0
     camera_device_file: /dev/video2
     camera_name: camera
-    exposure: 0.0
-    fps: 20
-    frame_id: map
     image_height: 480
     image_width: 640
+    fps: 20
     publisher_depth: 5
     rotation: 0
-    wb_temperature: 0.0
     # image_transport parameters
     usb_camera_driver:
       camera:
